--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -4,6 +4,7 @@
  */
 
 .btn {
+  font-size: 14px;
   min-width: 100px;
   .border-radius(@btn-border-radius);
   .box-shadow(@btn-boxshadow);
@@ -117,6 +118,15 @@
   height: 48px;
   padding: 14px 20px;
   font-size: 16px;
+}
+.btn-back {
+  color: @text-color-1;
+  span {
+    text-decoration: underline;
+  }
+  i {
+    margin-right: 5px;
+  }
 }
 
 
