--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -67,5 +67,14 @@ sup {
   text-decoration: underline;
   font-size: 65%;
 }
+.orange-text {
+  color: @orange;
+}
+.red-text {
+  color: @red;
+}
+.green-text {
+  color: @green;
+}
 
 
