--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -20,11 +20,13 @@
 @import "products.less";
 @import "dropdown.less";
 @import "pagination.less";
+@import "modal.less";
 //BLOCKS
 //------
 @import "block/header.less";
 @import "block/footer.less";
 @import "block/product-info-block.less";
+@import "block/invoice.less";
 //PAGES
 //------
 @import "page/product-onface.less";
