--- a/myface-onface-html/src/views/index.html
+++ b/myface-onface-html/src/views/index.html
@@ -15,7 +15,7 @@
       </select>
     </div>
     <div class="pull-right">
-       <a class="btn btn-primary btn-cart" href="#"><i class="fa fa-shopping-cart"></i><span>Giỏ hàng</span><span>(2)</span></a>
+      <button class="btn btn-primary btn-cart" data-toggle="modal" data-target="#invoice-emty-modal"><i class="fa fa-shopping-cart"></i><span>Giỏ hàng</span><span>(0)</span></button>
     </div>
 	</div><!--nav-filter-->
 	<div class="product-container">
@@ -29,10 +29,10 @@
         </a>
         <div class="product-info">
           <div class="product-header">
-            <a class="product-title" href="product-onface-detail.html">
-              <span>Áo Sơ Mi Nam Dáng Ôm màu xanh dương</span>
+            <h2 class="product-title">
+              <a href="product-onface-detail.html">Áo Sơ Mi Nam Dáng Ôm màu xanh dương</a>
               <span class="sale-tag">sale</span>
-            </a>
+            </h2>
             <div class="price-block">
               <span class="price current">235.000<sup>đ</sup></span>
               <span class="price original">325.000<sup>đ</sup></span> 
