--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -63,6 +63,15 @@ sup {
   text-decoration: underline;
   font-size: 65%;
 }
+.orange-text {
+  color: #ff5722;
+}
+.red-text {
+  color: #dd4b39;
+}
+.green-text {
+  color: #3ac562;
+}
 .page-margin-bottom {
   margin-bottom: 80px;
 }
@@ -78,6 +87,7 @@ sup {
  * -----------------
  */
 .btn {
+  font-size: 14px;
   min-width: 100px;
   border-radius: 2px;
   -webkit-box-shadow: none;
@@ -186,6 +196,15 @@ sup {
 .btn-action > * {
   margin: 0 5px;
 }
+.btn-back {
+  color: #212121;
+}
+.btn-back span {
+  text-decoration: underline;
+}
+.btn-back i {
+  margin-right: 5px;
+}
 /*
  * Component: Form
  * ---------------
@@ -259,6 +278,48 @@ sup {
 .form-group-sm .form-control + .form-control-feedback.fa {
   line-height: 30px;
 }
+/*
+ * Component: Table
+ * ----------------
+ */
+.table > tbody > tr > th,
+.table > tbody > tr > td {
+  border-bottom: 1px solid #dfdfdf;
+}
+.table > thead > tr > th {
+  border-bottom: 1px double #dfdfdf;
+}
+.table tr td .progress {
+  margin-top: 5px;
+}
+.table.table-nopadding > thead > tr > th,
+.table.table-nopadding > tbody > tr > th,
+.table.table-nopadding > tfoot > tr > th,
+.table.table-nopadding > thead > tr > td,
+.table.table-nopadding > tbody > tr > td,
+.table.table-nopadding > tfoot > tr > td {
+  padding: 13px 0;
+}
+.table-bordered {
+  border: 1px solid #dfdfdf;
+}
+.table-bordered > thead > tr > th,
+.table-bordered > tbody > tr > th,
+.table-bordered > tfoot > tr > th,
+.table-bordered > thead > tr > td,
+.table-bordered > tbody > tr > td,
+.table-bordered > tfoot > tr > td {
+  border: 1px solid #dfdfdf;
+}
+.table-bordered > thead > tr > th,
+.table-bordered > thead > tr > td {
+  border-bottom-width: 2px;
+}
+.table.no-border,
+.table.no-border td,
+.table.no-border th {
+  border: 0;
+}
 .table-label > thead > tr > th:first-child,
 .table-label > tbody > tr > th:first-child,
 .table-label > tfoot > tr > th:first-child,
@@ -316,6 +377,10 @@ sup {
   width: 100%;
   height: 100%;
 }
+.products-block .product-title a {
+  max-width: 90%;
+  display: inline-block;
+}
 .products-block .product-info {
   margin-left: 179px;
   padding: 15px;
@@ -345,13 +410,16 @@ sup {
 }
 .product-title {
   display: block;
+  position: relative;
   margin: 0 0 12px;
   font-size: 14px;
+}
+.product-title a {
   color: #212121;
 }
-.product-title:hover,
-.product-title:active,
-.product-title:focus {
+.product-title a:hover,
+.product-title a:active,
+.product-title a:focus {
   color: #ff5722;
 }
 .price-block {
@@ -464,6 +532,48 @@ sup {
   color: #fff;
   background-color: #cbd6ec;
   border-color: #cbd6ec;
+}
+.modal-secondary {
+  margin: 90px 0;
+}
+.modal-secondary .modal-dialog {
+  width: 682px;
+}
+.modal-secondary .modal-content {
+  -webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
+  box-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
+  border-radius: 4px;
+  border-color: transparent;
+}
+.modal-secondary .modal-header {
+  padding: 10px 15px;
+  background-color: #2bc5f8;
+  border-radius: 3px 3px 0 0;
+  border: 1px solid #2bc5f8;
+}
+.modal-secondary .modal-header .modal-title {
+  color: #fff;
+  font-size: 20px;
+}
+.modal-secondary .modal-header .amount {
+  font-size: 14px;
+}
+.modal-secondary .modal-body {
+  border: 1px solid #dfdfdf;
+  border-top: 0;
+  border-bottom: 0;
+  padding: 0 15px 15px;
+}
+.modal-secondary .close {
+  color: #fff;
+  opacity: 1;
+  margin-top: -3px;
+  margin-right: -5px;
+}
+.modal-footer {
+  border: 1px solid #dfdfdf;
+  border-top: 0;
+  border-radius: 0 0 3px 3px;
 }
 footer {
   width: 100%;
@@ -595,6 +705,84 @@ footer a {
 }
 .item-property.size-property .property-select > a {
   padding: 4px;
+}
+.invoice-modal .modal-body {
+  border-radius: 0 0 3px 3px;
+}
+.invoice-modal .btn {
+  width: 138px;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+.invoice-modal .btn > i {
+  font-size: 15px;
+  margin: 1px 0 0 5px;
+}
+.invoice-modal .amount .red-text {
+  font-size: 18px;
+  font-weight: bold;
+}
+.invoice-modal .emty-label {
+  color: #3ac562;
+  font-size: 18px;
+  margin: 0 0 5px;
+}
+.invoice-modal .emty-span {
+  margin-bottom: 20px;
+}
+.invoice-table {
+  margin-bottom: 0;
+}
+.invoice-table .product-img {
+  width: 65px;
+  height: 65px;
+  float: left;
+}
+.invoice-table .product-img img {
+  width: 100%;
+  height: 100%;
+}
+.invoice-table .product-info {
+  margin-left: 75px;
+  padding: 0 10px;
+}
+.invoice-table .select-amount {
+  margin-top: -2px;
+}
+.invoice-table tbody .price {
+  margin: 8px 0;
+  display: block;
+}
+.invoice-table .price {
+  font-size: 14px;
+}
+.invoice-table.table > thead > tr > th {
+  font-size: 14px;
+  padding: 10px 0 8px;
+  border-collapse: separate;
+  border-spacing: 2px;
+  border-bottom: double #dfdfdf;
+}
+.invoice-table.table > tfoot > tr > th,
+.invoice-table.table > tfoot > tr > td {
+  padding: 14px 0;
+}
+.invoice-remove {
+  margin: 5px 0 0;
+  font-size: 12px;
+  font-style: italic;
+  color: #b6b6b6;
+}
+.invoice-remove:hover {
+  color: #dd4b39;
+}
+.invoice-remove span {
+  text-decoration: underline;
+  margin-right: 5px;
+}
+.invoice-price-label {
+  font-size: 14px;
+  font-weight: bold;
 }
 .banner {
   width: 100%;
