--- a/myface-onface-html/src/assets/less/style/products.less
+++ b/myface-onface-html/src/assets/less/style/products.less
@@ -31,6 +31,12 @@
       height: 100%;
     }
   }
+  .product-title {
+    a {
+      max-width: 90%;
+      display: inline-block;
+    }
+  }
   .product-info {
     margin-left: 179px;
     padding: 15px;
@@ -38,8 +44,6 @@
   }
   .product-header {
     margin-right: 110px;
-  }
-  .product-title {
   }
   .product-description {
     margin-right: 140px;
@@ -61,13 +65,16 @@
 }
 .product-title {
   display: block;
+  position: relative;
   margin: 0 0 12px;
   font-size: 14px;
-  color: @text-color-1;
-  &:hover,
-  &:active,
-  &:focus {
-    color: @link-color;
+  a {
+    color: @text-color-1;
+    &:hover,
+    &:active,
+    &:focus {
+      color: @link-color;
+    }
   }
 }
 .price-block {
