--- a/myface-onface-html/src/views/layout/_layout.html
+++ b/myface-onface-html/src/views/layout/_layout.html
@@ -7,9 +7,10 @@
 {% block page-container %}{% endblock %}
 <!--footer-->
 {% block footer%}
-	{% include "../block/_footer.html" %}
+{% include "../block/_footer.html" %}
 {% endblock %}
 <!--modal-->
 {% block modal%}
 {% include "../block/modal/_invoice-modal.html" %}
+{% include "../block/modal/_invoice-emty-modal.html" %}
 {% endblock %}
