--- a/myface-onface-html/src/views/product-onface-detail.html
+++ b/myface-onface-html/src/views/product-onface-detail.html
@@ -11,8 +11,8 @@
   	  </select>
     </div>
     <div class="pull-right">
-      <a class="btn btn-back" href="index.html">Quay về</a>
-      <a class="btn btn-primary btn-cart" href="#"><i class="fa fa-shopping-cart"></i><span>Giỏ hàng</span><span>(2)</span></a>
+      <a class="btn btn-back" href="index.html"><i class="fa fa-angle-left"></i> <span>Quay về</span></a>
+      <button class="btn btn-primary btn-cart" data-toggle="modal" data-target="#invoice-modal"><i class="fa fa-shopping-cart"></i><span>Giỏ hàng</span><span>(2)</span></button>
     </div>
 	</div><!--nav-filter-->
 	<!--product-container-->
