--- a/myface-onface-html/src/views/index.html
+++ b/myface-onface-html/src/views/index.html
@@ -38,12 +38,12 @@
               <span class="price original">325.000<sup>đ</sup></span> 
             </div>
           </div>
-          <div class="block">
-            <a class="btn btn-default btn-buy" href="product-onface-detail.html">Mua ngay <i class="fa fa-angle-right"></i></a>
-          </div>
           <p class="product-description">
             Sử dụng chất liệu cao cấp cùng kiểu dáng hiện đại, áo sơ mi slim fit vạt bầu đem lại nét thanh lịch, sang trọng cho phái mạnh khi ...              
           </p>
+        </div>
+        <div class="product-action">
+          <a class="btn btn-default btn-buy" href="product-onface-detail.html">Mua ngay <i class="fa fa-angle-right"></i></a>
         </div>
       </div><!-- /.item -->
       {% endfor %}
