--- a/myface-onface-html/src/assets/less/style/block/product-info-block.less
+++ b/myface-onface-html/src/assets/less/style/block/product-info-block.less
@@ -3,7 +3,7 @@
 	border-top-style: double;
 	border-color: @line-color-1;
 	padding: 25px 0 0;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 	.block();
 	.product-gallery {
 		padding-left: 0;
@@ -25,11 +25,16 @@
 	}
 	.thumnail {
 		width: 358px;
+		height: 95px;
+		overflow: hidden;
 		padding: 15px 0;
+		position: relative;
 		.items {
-			width: 100%;
-			height: 65px;
-			overflow: hidden;
+			width: 1000px;
+			position: absolute;
+			top: 15px;
+			left: 0;
+			right: auto;
 			list-style: none;
 			padding: 0;
 			margin: 0;
@@ -37,14 +42,37 @@
 				width: 65px;
 				height: 65px;
 				border: 1px solid transparent;
-				margin-right: 8px;
+				margin-right: 4px;
 				display: inline-block;
-				&.active{
-					border-color: @line-color-1;
-				}
+				float: left;
+				&.active,
 				&:hover {
 					border-color: @line-color-1;
 				}
+			}
+		}
+		.slider-control {
+			display: none;
+			position: absolute;
+			top: 34px;
+			z-index: 9;
+			width: 25px;
+			height: 25px;
+			text-align: center;
+			font-size: 17px;
+			color: @text-color-2;
+			border: @border;
+			background-color: #fff;
+			&:hover {
+				color: #fff;
+				border-color: @bg-color-1;
+				background-color: @bg-color-1;
+			}
+			&.slider-prev {
+				left: 0;
+			}
+			&.slider-next {
+				right: 0;
 			}
 		}
 	}
