--- a/myface-onface-html/src/assets/less/style/products.less
+++ b/myface-onface-html/src/assets/less/style/products.less
@@ -9,6 +9,7 @@
   margin: 0;
   padding: 0;
   > .item {
+    position: relative;
     .border-radius(2px);
     border: 1px solid @box-border-color;
     .clearfix();
@@ -31,23 +32,43 @@
       height: 100%;
     }
   }
-  .product-title {
-    a {
-      max-width: 90%;
-      display: inline-block;
-    }
-  }
   .product-info {
+    height: 164px;
     margin-left: 179px;
+    margin-right: 140px;
     padding: 15px;
     position: relative;
   }
   .product-header {
-    margin-right: 110px;
+    height: 78px;
+    .product-title {
+      float: left;
+      line-height: 1.4;
+      a {
+        max-width: 85%;
+        max-height: 38px;
+        overflow: hidden;
+        display: table-cell;
+        float: left;
+      }
+      .sale-tag {
+        margin-left: 5px;
+      }
+    }
   }
   .product-description {
-    margin-right: 140px;
+    max-height: 36px;
+    overflow: hidden;
+    margin: 10px 0;
     color: @text-color-1;
+  }
+  .product-action {
+    width: 140px;
+    height: 164px;
+    padding: 60px 15px 0;
+    position: absolute;
+    right: 0;
+    top: 0;
   }
   .btn-buy {
     width: 110px;
@@ -79,6 +100,7 @@
 }
 .price-block {
   width: 100%;
+  display: table;
   height: 14px;
 }
 .price {
