--- a/myface-onface-html/src/assets/less/style/products.less
+++ b/myface-onface-html/src/assets/less/style/products.less
@@ -41,6 +41,7 @@
   }
   .product-header {
     height: 78px;
+    display: table;
     .product-title {
       float: left;
       line-height: 1.4;
