--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -30,6 +30,7 @@
 //PAGES
 //------
 @import "page/product-onface.less";
+@import "page/checkout.less";
 //Plugins
 //--------
 @import "plugin/bootstrap-select.less";
