--- a/myface-onface-html/src/assets/less/style/variables.less
+++ b/myface-onface-html/src/assets/less/style/variables.less
@@ -1,5 +1,6 @@
 //PATHS
 //--------------------------------------------------------
+@font-family: 'Source Sans Pro', sans-serif;
 @font-family-sans-serif-onface: Arial, sans-serif;
 //COLORS
 //--------------------------------------------------------
