--- a/myface-onface-html/src/views/block/modal/_invoice-modal.html
+++ b/myface-onface-html/src/views/block/modal/_invoice-modal.html
@@ -20,10 +20,10 @@
               <td>
                 <div class="item">
                   <div class="product-img">
-                    <a href="#"><img src="assets/images/upload/product/product-2.jpg" alt="myface"></a>
+                    <img src="assets/images/upload/product/product-2.jpg" alt="myface">
                   </div>
                   <div class="product-info">
-                    <a href="#" class="product-title">Combo 2 Hộp Sữa Bột Ensure Gold Acti M2 400g</a>
+                    <span href="#" class="product-title">Combo 2 Hộp Sữa Bột Ensure Gold Acti M2 400g</span>
                   </div>
                 </div>
               </td>
@@ -43,10 +43,10 @@
               <td>
                 <div class="item">
                   <div class="product-img">
-                    <a href="#"><img src="assets/images/upload/product/product-2.jpg" alt="myface"></a>
+                    <img src="assets/images/upload/product/product-2.jpg" alt="myface">
                   </div>
                   <div class="product-info">
-                    <a href="#" class="product-title">Combo 2 Hộp Sữa Bột Ensure Gold Acti M2 400g</a>
+                    <span href="#" class="product-title">Combo 2 Hộp Sữa Bột Ensure Gold Acti M2 400g</span>
                   </div>
                 </div>
               </td>
@@ -59,7 +59,7 @@
                 <p class="invoice-remove remove-btn"><i class="fa fa-times-circle"></i> <span>Bỏ sản phẩm</span></p>
               </td>
               <td class="text-right">
-                <span class="price">10.350.000<sup>đ</sup></span>
+                <span class="price">1.350.000<sup>đ</sup></span>
               </td>
             </tr>
           </tbody>
