--- a/myface-onface-html/src/views/checkout-step-1.html
+++ b/myface-onface-html/src/views/checkout-step-1.html
@@ -1,8 +1,6 @@
-{% extends "layout/_layout.html" %}
+{% extends "layout/_layout-checkout.html" %}
 {% block page-container %}
 <main>
-	<h1><span class="btn-back">Check out</h1>
-	<div class="container clearfix">
-  </div>
+	
 </main>
 {% endblock %}
