--- a/myface-onface-html/src/views/index.html
+++ b/myface-onface-html/src/views/index.html
@@ -1,4 +1,4 @@
-{% extends "layout/_layout.html" %}
+{% extends "layout/_layout-product-onface.html" %}
 {% block page-container %}
 <main>
 	<!--banner-->
