--- a/myface-onface-html/src/assets/less/style/block/footer.less
+++ b/myface-onface-html/src/assets/less/style/block/footer.less
@@ -22,8 +22,8 @@ footer {
 	}
 }
 .footer-link-1 {
-	color: @blue;
-	border-color: @blue;
+	color: @secondary-color;
+	border-color: @secondary-color;
 }
 .footer-link-2 {
 	border-color: @orange;
