--- a/myface-onface-html/src/assets/less/style/page/checkout.less
+++ b/myface-onface-html/src/assets/less/style/page/checkout.less
@@ -1,5 +1,14 @@
 .checkout {
-	.footer-link-1 {
-		color: @add-color-2;
+	
+}
+.checkout-step-1 {
+	.control-label {
+		padding-right: 0;
+		font-weight: normal;
 	}
+}
+.btn-checkout {
+	width: 100%;
+	font-size: 18px;
+	font-weight: bold;
 }
