--- a/myface-onface-html/src/assets/less/style/variables.less
+++ b/myface-onface-html/src/assets/less/style/variables.less
@@ -20,7 +20,8 @@
 //Primary
 @primary-color: @orange;
 //Secondary
-@secondary-color: @blue;
+@secondary-color: #4355a5;
+@secondary-color-lighter: #8e99c9;
 //Danger
 @danger-color: @red;
 //Success
@@ -44,8 +45,10 @@
 //btn-color 
 @btn-color-1: @primary-color;
 @btn-color-1-hover: #ff7540;
-@btn-color-2: @light-orange;
-@btn-color-2: @gray;
+@btn-color-2: @secondary-color-lighter;
+@btn-color-2-hover: @secondary-color;
+@btn-color-3: @light-orange;
+@btn-color-4: @gray;
 
 
 //LAYOUT
@@ -81,7 +84,7 @@
 
 //FORMS
 //--------------------------------------------------------
-@input-radius: 0;
+@input-radius: 3px;
 
 //BUTTONS
 //--------------------------------------------------------
