--- a/myface-onface-html/src/views/block/_checkout-header.html
+++ b/myface-onface-html/src/views/block/_checkout-header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="container">
 	<a class="shop-logo" href="#">
 		<img src="assets/images/upload/shop-logo/shop-logo.png" alt="myface">
 	</a>
