--- a/myface-onface-html/src/assets/less/style/forms.less
+++ b/myface-onface-html/src/assets/less/style/forms.less
@@ -94,3 +94,10 @@
 .form-group-sm .form-control + .form-control-feedback.fa {
   line-height: @input-height-small;
 }
+
+/*form-horizontal*/
+.form-horizontal {
+  .control-label {
+    text-align: left;
+  }
+}
