--- a/myface-onface-html/src/views/checkout-step-1.html
+++ b/myface-onface-html/src/views/checkout-step-1.html
@@ -1,6 +1,117 @@
 {% extends "layout/_layout-checkout.html" %}
 {% block page-container %}
-<main>
-	
+<main class="container checkout-step-1">
+	<div class="col-xs-9">
+		<div class="panel panel-default">
+		  <div class="panel-heading">Địa chỉ nhận hàng</div>
+		  <div class="panel-body">
+		    <div class="row">
+		    	<div class="col-xs-7 form-horizontal">
+	    			<div class="form-group">
+              <label for="" class="col-xs-4 control-label">Họ tên người nhận hàng</label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="" class="col-xs-4 control-label">Số điện thoại</label>
+              <div class="col-sm-8">
+                <input type="tel" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="" class="col-xs-4 control-label">Email</label>
+              <div class="col-sm-8">
+                <input type="email" class="form-control">
+              </div>
+            </div>
+            <div class="divider"></div>
+            <div class="form-group">
+              <label for="" class="col-xs-4 control-label">Tỉnh/Thành phố</label>
+              <div class="col-sm-8">
+                <input type="email" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="" class="col-xs-4 control-label">Quận/Huyện - Phường/Xã</label>
+              <div class="col-sm-8">
+                <input type="email" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="" class="col-xs-4 control-label">Tên đường/Phố</label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="" class="col-xs-4 control-label">Số nhà/Ngõ/Ngách/Hẽm</label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control">
+              </div>
+            </div>
+            <div class="divider"></div>
+            <div class="col-xs-12">
+	            <div class="form-group">
+	              <label>Bạn cần Shop lưu ý điều gì khi giao hàng không?</label>
+	              <textarea class="form-control" rows="3"></textarea>
+	            </div>
+	          </div>
+		    	</div>
+
+		    	<div class="col-xs-5">
+		    		<div class="">
+			    		<p>Hoặc bạn chỉ cần để lại <strong>số điện thoại</strong>, Shop sẽ liên hệ lấy thông tin giao hàng sớm nhất.</p>
+			    		<span class="note">(Qui trình xử lý đơn hàng sẽ chậm hơn một chút)</span>
+			    		<input type="text" class="form-control" placeholder="Nhập số  điện thoại - ví dụ: 0902389789">
+			    	</div>
+		    		<div class="">
+		    			<p>Nếu bạn thích trải nghiệm mua hàng lần sau <strong>đơn giản hơn</strong>, bạn nên đăng nhập/đăng ký tài khoản ngay bây giờ.</p>
+		    			<p><a class="btn btn-secondary btn-login" href="login.html">Đăng nhập</a><p>
+		    			<p>
+		    				<a class="btn btn-secondary btn-login" href="register.html">Đăng ký tài khoản</a>
+		    				<span class="note">(chỉ mất chưa tới 3 phút)</span>
+		    			</p>
+		    		</div>
+		    	</div>
+		    </div>
+		  </div>
+		</div>
+	</div>
+	<div class="col-xs-3">
+		<div class="box">
+			<p>Đơn hàng của bạn cần trên 150.000đ để được miễn phí vận chuyển tại TP.HCM, Hà Nội.</p>
+			<span>(trên 300.000đ đối với Tỉnh/Thành khác)</span>
+		</div>
+		<div class="box">
+			<p>Nhập mã giảm giá của bạn (nếu có)</p>
+			<div class="input-group">
+				<input type="text" class="form-control" placeholder="">
+				<input type="submit" class="form-control" value="Áp dụng">
+			</div>
+		</div>
+		<div class="box-cart">
+		  <div class="box">
+		    <h2>Đơn hàng</h2>(<span>1</span> sản phẩm)
+		    <div class="cart-items">
+		      <div class="list_item cart-item">
+		        <span>1 x</span> <span>Quechua Arpenaz 18 Backpack Red</span>
+		        <span class="price">199,000</span>
+		        <p class="variant-title"></p>
+		      </div>
+		    </div>
+		    <div class="total-price">
+		      Tạm tính <label>199,000</label>
+		    </div>
+		    <div class="shiping-price">
+		      Phí vận chuyển <label>0</label>
+		    </div>
+		    <div class="total-checkout">
+		      Tổng cộng <span>199,000</span>
+		    </div>
+		  </div>
+		  <button type="submit" class="btn btn-primary btn-checkout">Tiếp tục</button>
+		</div>
+	</div>
 </main>
 {% endblock %}
