--- a/myface-onface-html/src/assets/less/style/dropdown.less
+++ b/myface-onface-html/src/assets/less/style/dropdown.less
@@ -42,3 +42,9 @@
     box-shadow: none;
 	}
 }
+.default-dropdown {
+	.amount-dropdown();
+	min-width: 100px;
+	width: auto !important;
+	padding-left: 0;
+}
