--- a/myface-onface-html/src/assets/less/style/forms.less
+++ b/myface-onface-html/src/assets/less/style/forms.less
@@ -100,4 +100,22 @@
   .control-label {
     text-align: left;
   }
+  .form-inline {
+    .form-group {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+  .form-group {
+    margin-bottom: 8px;
+  }
+}
+.form-inline-group {
+  .form-group {
+    width: 50%;
+    .form-control {
+      min-width: auto;
+      width: 100%;
+    }
+  }
 }
