--- a/myface-onface-html/src/assets/less/style/page/product-onface.less
+++ b/myface-onface-html/src/assets/less/style/page/product-onface.less
@@ -10,6 +10,22 @@
 .product-onface {
 	width: 780px;
 	border: 1px solid #e9eaed;
+	font-family: @font-family-sans-serif-onface;
+	font-size: 13px;
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6,
+	.h1,
+	.h2,
+	.h3,
+	.h4,
+	.h5,
+	.h6 {
+	  font-family: @font-family-sans-serif-onface;
+	}
 }
 .nav-filter {
 	width: 100%;
