--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -13,7 +13,7 @@ body {
 body {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: @font-family-sans-serif-onface;
+  font-family: @font-family;
   font-weight: 400;
   font-size: 13px;
   color: @text-color-1;
@@ -41,7 +41,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: @font-family-sans-serif-onface;
+  font-family: @font-family;
 }
 /* General Links */
 a {
@@ -54,19 +54,6 @@ a:focus {
   text-decoration: none;
   color: @link-hover-color;
 }
-img {
-  max-width: 100%;
-}
-.block {
-  width: 100%;
-  display: table;
-}
-sup {
-  margin-left: 2px;
-  top: -0.4em;
-  text-decoration: underline;
-  font-size: 65%;
-}
 .orange-text {
   color: @orange;
 }
@@ -75,6 +62,32 @@ sup {
 }
 .green-text {
   color: @green;
+}
+.note {
+  color: @text-color-2;
+  font-size: 13px;
+  font-style: italic;
+}
+label.error {
+  color: @red;
+  font-size: 11px;   
+  font-weight: normal;        
+  padding: 0;
+  margin: 0;
+  display: none;
+}
+sup {
+  margin-left: 2px;
+  top: -0.4em;
+  text-decoration: underline;
+  font-size: 65%;
+}
+img {
+  max-width: 100%;
+}
+.block {
+  width: 100%;
+  display: table;
 }
 
 
