--- a/myface-onface-html/src/assets/less/style/fontface.less
+++ b/myface-onface-html/src/assets/less/style/fontface.less
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700&subset=latin,vietnamese);// Fontface
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,300,700,900&subset=latin,vietnamese);// Fontface
 @font-face {
   font-family: 'fontawesome';
   font-weight: normal;
