--- a/myface-onface-html/src/assets/less/style/modal.less
+++ b/myface-onface-html/src/assets/less/style/modal.less
@@ -25,7 +25,7 @@
 		border: 1px solid @line-color-1;
 		border-top: 0;
 		border-bottom: 0;
-		padding: 0 15px 15px;
+		padding: 15px;
 	}
 	.close {
 		color: #fff;
