--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -21,6 +21,7 @@
 @import "dropdown.less";
 @import "pagination.less";
 @import "modal.less";
+@import "panel.less";
 //BLOCKS
 //------
 @import "block/header.less";
